# test-task-echo-client-server

./: README.md
client/: CMakeLists.txt
client/src/: main.cpp  telnet_frame_reader.hpp
common-linux/include/platform/: sockets.hpp  time.hpp
common-win/include/platform/: sockets.hpp  time.hpp
common/include/: exceptions.hpp  sockets.hpp  sockets_exceptions.hpp
common/include/gie/: char2hex.hpp  format.hpp
server/: CMakeLists.txt
server/src/: app.hpp  cmd_parser.hpp  command_loop.cpp  command_loop.hpp  main.cpp  session.hpp  utc_time.hpp
